Attempt to optimise adding and removing entities.